--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <!-- HERO -->
     <header class="site-header middle">
   <div class="hero">
-    <img class="logo" src="assets/logo.jpg" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
+    <img class="logo" src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
     <div>
       <h1>Solarstrom statt Erdgas-Strom</h1>
       <p class="tagline">Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken &amp; versenden physisch.</p>
@@ -408,6 +408,7 @@
   </script>
 </body>
 </html>
+
 
 
 
