--- a/index.html
+++ b/index.html
@@ -168,19 +168,23 @@
   <div class="page">
     <!-- HERO -->
     <header class="site-header middle">
-  <div class="hero">
-    <img class="logo" src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
-    <div>
-      <h1>Solarstrom statt Erdgas-Strom</h1>
-      <p class="tagline">Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken &amp; versenden physisch.</p>
-      <div style="margin-top:10px">
-        <a class="cta primary" href="#mitmachen">Jetzt mitmachen</a>
-        <a class="cta secondary" href="#material">Materialien</a>
+  <div class="hero-wrap">
+    <div class="hero">
+      <div class="hero-panel">
+        <img class="logo" src="assets/SolarstromGasstromTitel.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
+        <h1>Solarstrom statt Erdgas-Strom</h1>
+        <p class="tagline">
+          Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken &amp; versenden physisch.
+        </p>
+        <div class="cta-row">
+          <a class="cta primary" href="#mitmachen">Jetzt mitmachen</a>
+          <a class="cta secondary" href="#material">Materialien</a>
+        </div>
       </div>
     </div>
   </div>
 
-  <!-- Zähler bleibt wie gehabt -->
+  <!-- Live-Zähler -->
   <div class="stats-banner" role="status" aria-live="polite">
     <div class="stats-iconbox"><div class="stats-icon" aria-hidden="true">📄</div></div>
     <div class="stats-text">
@@ -193,6 +197,7 @@
     </div>
   </div>
 </header>
+
 
     <!-- CONTENT -->
     <main class="middle">
@@ -408,6 +413,7 @@
   </script>
 </body>
 </html>
+
 
 
 
