--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <div class="hero-wrap">
     <div class="hero">
       <div class="hero-panel">
-        <img class="logo" src="assets/SolarstromGasstromTitel.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
+        <img class="logo" src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
         <h1>Solarstrom statt Erdgas-Strom</h1>
         <p class="tagline">
           Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken &amp; versenden physisch.
@@ -413,6 +413,7 @@
   </script>
 </body>
 </html>
+
 
 
 
