--- a/index.html
+++ b/index.html
@@ -38,129 +38,65 @@
     .page { display:grid; grid-template-columns: 1fr minmax(0, var(--maxw)) 1fr; min-height:100dvh; }
     .middle { grid-column:2; width:100%; padding: 0 16px; }
 
-    /* === Hero mit Hintergrundbild + Overlay-Panel === */
-    .hero-wrap{
-      position: relative;
-      border-radius: 0 0 var(--radius) var(--radius);
-      overflow: hidden;
-      background:
-        linear-gradient(rgba(0,0,0,.35), rgba(0,0,0,.55)),
-        url('assets/Bundestag.jpg') center 40%/cover no-repeat;
-    }
-    .hero{
-      display:flex; align-items:center; justify-content:center; text-align:center;
-      padding: 84px 16px 72px;
-      color:#fff;
-    }
-    .hero-inner{
-      background: rgba(10,125,50,.82);
-      backdrop-filter: saturate(110%) blur(2px);
-      border-radius: 22px;
-      padding: 22px 24px;
-      max-width: 860px;
-      width: min(92vw, 860px);
-      margin: 0 auto;
-      box-shadow: var(--shadow-lg);
-    }
-    .hero .brandbar{
-      display:flex; gap:10px; align-items:center; justify-content:center;
-      font-weight:700; letter-spacing:.2px;
-      margin-bottom: 10px;
-    }
-    .branddot{ width:8px; height:8px; border-radius:50%; background:#fff; opacity:.7; }
-    .hero h1{
-      font-size: clamp(1.6rem, 2.6vw + 1rem, 2.4rem);
-      line-height: 1.15;
-      margin: 6px 0 6px;
-    }
-    .hero .tagline{
-      font-size: clamp(1rem, .5vw + .95rem, 1.15rem);
-      opacity:.95;
-      margin: 0;
-    }
-    .cta-row{ display:flex; gap:10px; flex-wrap:wrap; justify-content:center; margin-top:14px; }
-    .cta{
-      display:inline-block; padding:12px 18px; border-radius: 12px; font-weight:700; text-decoration:none;
-      transition: transform .15s ease, box-shadow .15s ease, opacity .15s ease;
-    }
-    .cta.primary{
-      color:#fff; background: linear-gradient(135deg, var(--brand), var(--brand-2));
-      box-shadow: 0 8px 20px rgba(11,189,84,.25);
-    }
-    .cta.secondary{ color: var(--brand); background:#eaf9f1; border:1px solid #cfe7d8; }
-    .cta:hover{ transform: translateY(-1px); }
-
-    /* === Stats-Banner === */
-    .stats-banner{
-      display:flex; align-items:center; gap:14px;
-      margin: -42px auto 28px; padding: 14px 18px;
-      width: fit-content; max-width: 100%;
-      background: linear-gradient(135deg, #0a7c5b 0%, #12a37d 50%, #0a7c5b 100%);
-      color:#fff; border-radius:16px; box-shadow: var(--shadow);
-    }
-    .stats-iconbox{
-      width:42px; height:42px; border-radius:12px; display:flex; align-items:center; justify-content:center;
-      background: rgba(255,255,255,.15);
-      box-shadow: inset 0 0 0 1px rgba(255,255,255,.18);
-    }
-    .stats-icon{ font-size:1.3rem; filter: drop-shadow(0 2px 2px rgba(0,0,0,.25)); }
-    .stats-text{ display:flex; flex-direction:column; line-height:1.1; }
-    .stats-label{ font-size:.9rem; opacity:.95; letter-spacing:.2px; }
-    .stats-value{ font-weight:800; font-size:2.1rem; line-height:1; margin-top:2px; }
-    .count{ font-variant-numeric: tabular-nums; }
-    .stats-meta{ margin-top:6px; font-size:.82rem; opacity:.92; }
-    .stats-meta .dot{ display:inline-block; width:6px; height:6px; border-radius:50%; background:#fff; opacity:.7; margin:0 8px 1px; vertical-align:middle; }
-
-    @media (max-width:600px){
-      .hero-inner{ border-radius: 18px; padding: 18px; }
-      .stats-banner{ margin: -30px auto 22px; padding: 12px 14px; }
-      .stats-value{ font-size:1.7rem; }
-    }
-
-    /* === Sections === */
-    main.middle > section { margin: 32px 0; }
-
-    .lead{ font-size:1.12rem; background: var(--card); border-radius: var(--radius); padding: 18px; box-shadow: var(--shadow); }
-    .callout{ border-left: 5px solid var(--accent); background:#fff8e1; padding:14px 16px; border-radius:10px; }
-
-    .grid2{ display:grid; gap:18px; grid-template-columns:1fr; }
-    @media (min-width: 780px){ .grid2{ grid-template-columns: 1fr 1fr; } }
-
-    .card{
-      background: var(--card); border-radius: var(--radius); padding: 18px;
-      box-shadow: var(--shadow);
-      transition: transform .2s ease, box-shadow .2s ease;
-    }
-    .card:hover{ transform: translateY(-3px); box-shadow: 0 12px 28px rgba(0,0,0,.12); }
-    .card h3{ margin: 0 0 8px; color: var(--brand); }
-
-    .video-wrap{ position:relative; width:100%; aspect-ratio:16/9; background:#000; border-radius:12px; overflow:hidden; box-shadow: var(--shadow); }
-    .video-wrap iframe{ position:absolute; inset:0; width:100%; height:100%; border:0; }
-
-    /* === Partner === */
-    .partner{ background: var(--card); border-radius: var(--radius); padding: 18px; box-shadow: var(--shadow); }
-    .orgs{ display:grid; gap:18px; grid-template-columns:1fr; }
-    @media (min-width: 780px){ .orgs{ grid-template-columns: 1fr 1fr; } }
-    .org{ display:grid; grid-template-columns: 88px 1fr; gap:14px; align-items:start; }
-    .logoBox{ display:flex; align-items:center; justify-content:center; background:#f3f6f5; border:1px solid #e5e7eb; border-radius:10px; padding:10px; }
-    .org a{ color: var(--brand); text-decoration: none; }
-    .org a:hover{ text-decoration: underline; }
-
-    /* === Footer === */
-    footer{ margin: 36px 0 24px; color: var(--muted); }
-    footer .legal{ text-align:center; display:block; }
-    footer a{ color: inherit; }
-
-    /* === Utility === */
-    .section-title{ margin: 0 0 12px; color: var(--brand); }
-
-/* Hero mit Logo – Desktop & mobil */
-.hero { display:flex; align-items:center; justify-content:center; gap:20px; flex-wrap:wrap; text-align:center; padding:32px 0; }
-.hero img.logo { max-height: 220px; width:auto; display:block; }
-@media (max-width: 600px) {
-  .hero { flex-direction: column; padding: 16px 0; }
-  .hero img.logo { max-width: 90%; max-height: 140px; object-fit: contain; margin: 0 auto; }
+    /* HERO mit Hintergrundbild */
+.hero-wrap{
+  position:relative;
+  overflow:hidden;
+  border-radius:0 0 16px 16px;
+  background:
+    linear-gradient(rgba(0,0,0,.32), rgba(0,0,0,.55)),
+    url('assets/Bundestag.jpg') center 45%/cover no-repeat;
 }
+.hero{
+  display:flex; align-items:center; justify-content:center;
+  text-align:center; color:#fff;
+  /* unten mehr Platz, damit der Zähler „angedockt“ Platz hat */
+  padding: 90px 16px 120px;
+}
+.hero-panel{
+  background: rgba(10,125,50,.82);
+  border-radius:22px; padding:24px 28px;
+  width:min(92vw, 880px); max-width:880px;
+  box-shadow:0 18px 48px rgba(0,0,0,.28);
+}
+.hero .logo{
+  width: clamp(220px, 50vw, 480px);
+  height:auto; display:block; margin:0 auto 12px;
+  filter: drop-shadow(0 3px 8px rgba(0,0,0,.35));
+}
+.hero h1{
+  margin:8px 0 4px;
+  font-size: clamp(1.6rem, 2.2vw + 1rem, 2.4rem);
+  font-weight:800; color:#fff;
+}
+.hero .tagline{ margin:6px 0 0; font-size:1.08rem; opacity:.96; }
+.cta-row{ margin-top:14px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
+.cta{ display:inline-block; padding:12px 18px; border-radius:12px; font-weight:700; text-decoration:none; transition:transform .15s ease; }
+.cta.primary{ background:linear-gradient(135deg,#0a7d32,#0bbd54); color:#fff; }
+.cta.secondary{ background:#fff; color:#0a7d32; border:1px solid #cfe7d8; }
+.cta:hover{ transform:translateY(-1px); }
+
+/* Zähler sauber unter dem Hero; leicht nach oben gezogen */
+.stats-wrap{
+  display:flex; justify-content:center;
+  transform: translateY(-56px);
+  margin-bottom: -40px;   /* kompensiert das Translate so, dass der Flow stimmt */
+}
+.stats-banner{ box-shadow:0 12px 28px rgba(10,124,91,.28); }
+
+/* Mobil-Tuning */
+@media (max-width: 600px){
+  .hero{ padding: 70px 12px 110px; }
+  .hero-panel{ padding:16px; border-radius:16px; }
+  .hero .logo{ max-width:85%; }
+  .hero .tagline{ font-size:.98rem; }
+  .stats-wrap{ transform: translateY(-42px); margin-bottom:-28px; }
+}
+
+/* Fade-in/Slide-up Animation */
+.reveal{ opacity:0; transform: translateY(12px); }
+.reveal.is-visible{ opacity:1; transform: translateY(0); transition: opacity .55s ease, transform .55s ease; }
+
     
   </style>
 </head>
@@ -170,7 +106,7 @@
     <header class="site-header middle">
   <div class="hero-wrap">
     <div class="hero">
-      <div class="hero-panel">
+      <div class="hero-panel reveal">
         <img class="logo" src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
         <h1>Solarstrom statt Erdgas-Strom</h1>
         <p class="tagline">
@@ -184,19 +120,22 @@
     </div>
   </div>
 
-  <!-- Live-Zähler -->
-  <div class="stats-banner" role="status" aria-live="polite">
-    <div class="stats-iconbox"><div class="stats-icon" aria-hidden="true">📄</div></div>
-    <div class="stats-text">
-      <div class="stats-label">Erzeugte PDF-Briefe</div>
-      <div class="stats-value"><span id="pdfCount" class="count">–</span></div>
-      <div class="stats-meta" id="statsMeta" hidden>
-        <span class="dot" aria-hidden="true"></span>
-        <span id="statsTime">Stand: –</span>
+  <!-- Zähler: eigene Zeile, optisch „angedockt“ -->
+  <div class="stats-wrap reveal">
+    <div class="stats-banner" role="status" aria-live="polite">
+      <div class="stats-iconbox"><div class="stats-icon" aria-hidden="true">📄</div></div>
+      <div class="stats-text">
+        <div class="stats-label">Erzeugte PDF-Briefe</div>
+        <div class="stats-value"><span id="pdfCount" class="count">–</span></div>
+        <div class="stats-meta" id="statsMeta" hidden>
+          <span class="dot" aria-hidden="true"></span>
+          <span id="statsTime">Stand: –</span>
+        </div>
       </div>
     </div>
   </div>
 </header>
+
 
 
     <!-- CONTENT -->
@@ -411,8 +350,24 @@
 
     loadCounter();
   </script>
+
+  <script>
+  // Reveal on load / scroll
+  (function(){
+    const els = document.querySelectorAll('.reveal');
+    if(!('IntersectionObserver' in window)){ els.forEach(e=>e.classList.add('is-visible')); return; }
+    const io = new IntersectionObserver((entries)=>{
+      entries.forEach(ent=>{
+        if(ent.isIntersecting){ ent.target.classList.add('is-visible'); io.unobserve(ent.target); }
+      });
+    }, {rootMargin: '0px 0px -10% 0px', threshold: .12});
+    els.forEach(e=>io.observe(e));
+  })();
+</script>
+
 </body>
 </html>
+
 
 
 
