--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Solarstrom statt Erdgas-Strom – Info & Mitmachen</title>
   <meta name="description" content="Alle Infos zur Kampagne Solarstrom statt Erdgas-Strom: Ziele, Hintergründe, Materialien und Mitmach-Möglichkeiten.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap">
   <style>
     /* === Design-Token === */
     :root{
@@ -15,7 +15,7 @@
       --brand-2: #0bbd54;
       --bg: #f7faf9;
       --card: #fff;
-      --text: #222;
+      --text: #1f2937;
       --muted: #6b7280;
       --accent: #f6b10a;
       --radius: 14px;
@@ -34,111 +34,166 @@
       color: var(--text);
     }
     img { max-width: 100%; display: block; }
+    a { color: var(--brand); text-decoration: none; }
+    a:hover { text-decoration: underline; }
 
     .page { display:grid; grid-template-columns: 1fr minmax(0, var(--maxw)) 1fr; min-height:100dvh; }
     .middle { grid-column:2; width:100%; padding: 0 16px; }
 
-    /* HERO mit Hintergrundbild */
-.hero-wrap{
-  position:relative;
-  overflow:hidden;
-  border-radius:0 0 16px 16px;
-  background:
-    linear-gradient(rgba(0,0,0,.32), rgba(0,0,0,.55)),
-    url('assets/Bundestag.jpg') center 45%/cover no-repeat;
-}
-.hero{
-  display:flex; align-items:center; justify-content:center;
-  text-align:center; color:#fff;
-  /* unten mehr Platz, damit der Zähler „angedockt“ Platz hat */
-  padding: 90px 16px 120px;
-}
-.hero-panel{
-  background: rgba(10,125,50,.82);
-  border-radius:22px; padding:24px 28px;
-  width:min(92vw, 880px); max-width:880px;
-  box-shadow:0 18px 48px rgba(0,0,0,.28);
-}
-.hero .logo{
-  width: clamp(220px, 50vw, 480px);
-  height:auto; display:block; margin:0 auto 12px;
-  filter: drop-shadow(0 3px 8px rgba(0,0,0,.35));
-}
-.hero h1{
-  margin:8px 0 4px;
-  font-size: clamp(1.6rem, 2.2vw + 1rem, 2.4rem);
-  font-weight:800; color:#fff;
-}
-.hero .tagline{ margin:6px 0 0; font-size:1.08rem; opacity:.96; }
-.cta-row{ margin-top:14px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
-.cta{ display:inline-block; padding:12px 18px; border-radius:12px; font-weight:700; text-decoration:none; transition:transform .15s ease; }
-.cta.primary{ background:linear-gradient(135deg,#0a7d32,#0bbd54); color:#fff; }
-.cta.secondary{ background:#fff; color:#0a7d32; border:1px solid #cfe7d8; }
-.cta:hover{ transform:translateY(-1px); }
+    /* ===== HERO mit Hintergrundbild ===== */
+    .hero-wrap{
+      position:relative;
+      overflow:hidden;
+      border-radius:0 0 16px 16px;
+      background:
+        linear-gradient(rgba(0,0,0,.32), rgba(0,0,0,.55)),
+        url('assets/Bundestag.jpg') center 45%/cover no-repeat;
+    }
+    .hero{
+      display:flex; align-items:center; justify-content:center;
+      text-align:center; color:#fff;
+      /* unten mehr Platz, damit der Zähler „angedockt“ Platz hat */
+      padding: 90px 16px 120px;
+    }
+    .hero-panel{
+      background: rgba(10,125,50,.82);
+      border-radius:22px; padding:24px 28px;
+      width:min(92vw, 880px); max-width:880px;
+      box-shadow:0 18px 48px rgba(0,0,0,.28);
+      backdrop-filter: blur(2px);
+    }
+    .hero .logo{
+      width: clamp(220px, 50vw, 480px);
+      height:auto; display:block; margin:0 auto 12px;
+      filter: drop-shadow(0 3px 8px rgba(0,0,0,.35));
+    }
+    .hero h1{
+      margin:8px 0 4px;
+      font-size: clamp(1.6rem, 2.2vw + 1rem, 2.4rem);
+      font-weight:800; color:#fff;
+    }
+    .hero .tagline{ margin:6px 0 0; font-size:1.08rem; opacity:.96; }
+    .cta-row{ margin-top:14px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
+    .cta{ display:inline-block; padding:12px 18px; border-radius:12px; font-weight:700; text-decoration:none; transition:transform .15s ease; }
+    .cta.primary{ background:linear-gradient(135deg,#0a7d32,#0bbd54); color:#fff; }
+    .cta.secondary{ background:#fff; color:#0a7d32; border:1px solid #cfe7d8; }
+    .cta:hover{ transform:translateY(-1px); }
 
-/* Zähler sauber unter dem Hero; leicht nach oben gezogen */
-.stats-wrap{
-  display:flex; justify-content:center;
-  transform: translateY(-56px);
-  margin-bottom: -40px;   /* kompensiert das Translate so, dass der Flow stimmt */
-}
-.stats-banner{ box-shadow:0 12px 28px rgba(10,124,91,.28); }
+    /* ===== Zähler – kompakt & angedockt ===== */
+    .stats-wrap{
+      display:flex; justify-content:center;
+      transform: translateY(-56px);
+      margin-bottom: -40px; /* kompensiert das Translate im Flow */
+    }
+    .stats-banner{
+      display:flex; align-items:center; gap:10px;
+      padding:10px 16px; min-width:230px;
+      background:linear-gradient(135deg,#0a7c5b 0%,#12a37d 50%,#0a7c5b 100%);
+      color:#fff; border-radius:12px; box-shadow:0 12px 28px rgba(10,124,91,.28);
+    }
+    .stats-iconbox{ width:34px; height:34px; display:flex; align-items:center; justify-content:center; background:rgba(255,255,255,.15); border-radius:8px; }
+    .stats-icon{ font-size:1.1rem; }
+    .stats-text{ line-height:1.1; }
+    .stats-label{ font-size:.85rem; opacity:.9; }
+    .stats-value{ font-size:1.7rem; font-weight:800; }
+    .count{ font-variant-numeric: tabular-nums; }
+    .stats-meta{ font-size:.75rem; margin-top:2px; opacity:.85; }
+    .stats-meta .dot{ display:inline-block; width:6px; height:6px; border-radius:50%; background:#fff; opacity:.7; margin:0 8px 1px; vertical-align:middle; }
 
-/* Mobil-Tuning */
-@media (max-width: 600px){
-  .hero{ padding: 70px 12px 110px; }
-  .hero-panel{ padding:16px; border-radius:16px; }
-  .hero .logo{ max-width:85%; }
-  .hero .tagline{ font-size:.98rem; }
-  .stats-wrap{ transform: translateY(-42px); margin-bottom:-28px; }
-}
+    @media (max-width: 600px){
+      .hero{ padding: 70px 12px 110px; }
+      .hero-panel{ padding:16px; border-radius:16px; }
+      .hero .logo{ max-width:85%; }
+      .hero .tagline{ font-size:.98rem; }
+      .stats-wrap{ transform: translateY(-42px); margin-bottom:-28px; }
+      .stats-banner{ padding:8px 12px; min-width:200px; }
+      .stats-value{ font-size:1.45rem; }
+    }
 
-/* Fade-in/Slide-up Animation */
-.reveal{ opacity:0; transform: translateY(12px); }
-.reveal.is-visible{ opacity:1; transform: translateY(0); transition: opacity .55s ease, transform .55s ease; }
+    /* ===== Sektionen / Karten ===== */
+    main.middle > section { margin: 32px 0; }
+    .lead { font-size:1.05rem; }
+    .section-title{ font-size:1.5rem; margin:0 0 14px; }
+    .grid2 { display:grid; gap:18px; grid-template-columns:1fr; }
+    @media (min-width:780px){ .grid2{ grid-template-columns:1fr 1fr } }
+    .card { border:1px solid rgba(0,0,0,.06); border-radius: var(--radius); padding:18px; background:var(--card); box-shadow: var(--shadow); }
+    .card h3 { margin-top:0 }
+    .callout { border-left: 4px solid var(--accent); background:#fff8e1; padding:14px 16px; border-radius: 8px; }
 
-    
+    /* ===== YouTube: groß & responsiv ===== */
+    .video-wrap {
+      position: relative;
+      width: 100%;
+      max-width: 800px;
+      margin: 0 auto 20px;
+      aspect-ratio: 16 / 9;
+      border-radius: 12px;
+      overflow: hidden;
+      background: #000;
+      box-shadow: 0 6px 24px rgba(0,0,0,.15);
+    }
+    .video-wrap iframe {
+      position: absolute; inset: 0;
+      width: 100%; height: 100%; border: 0;
+    }
+    @media (max-width:600px){
+      .video-wrap{ max-width:95vw; margin-bottom:16px; }
+    }
+
+    /* ===== Partner ===== */
+    .partner { border:1px solid rgba(0,0,0,.08); border-radius:12px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04); }
+    .partner h2 { margin-top:0; }
+    .orgs { display:grid; gap:18px; grid-template-columns:1fr; align-items:start; }
+    @media (min-width:780px){ .orgs{ grid-template-columns:1fr 1fr } }
+    .org { display:grid; grid-template-columns:80px 1fr; gap:14px; align-items:start; }
+    .org .logoBox { display:flex; align-items:center; justify-content:center; background:#f9fafb; border:1px solid #e5e7eb; border-radius:10px; padding:10px; }
+    .org img { max-width:100%; height:auto; display:block; }
+
+    /* Footer */
+    footer .legal { text-align:center; display:block; }
+
+    /* Reveal Animation */
+    .reveal{ opacity:0; transform: translateY(12px); }
+    .reveal.is-visible{ opacity:1; transform: translateY(0); transition: opacity .55s ease, transform .55s ease; }
   </style>
 </head>
 <body>
   <div class="page">
-    <!-- HERO -->
+    <!-- ===== HERO ===== -->
     <header class="site-header middle">
-  <div class="hero-wrap">
-    <div class="hero">
-      <div class="hero-panel reveal">
-        <img class="logo" src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
-        <h1>Solarstrom statt Erdgas-Strom</h1>
-        <p class="tagline">
-          Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken &amp; versenden physisch.
-        </p>
-        <div class="cta-row">
-          <a class="cta primary" href="#mitmachen">Jetzt mitmachen</a>
-          <a class="cta secondary" href="#material">Materialien</a>
+      <div class="hero-wrap">
+        <div class="hero">
+          <div class="hero-panel reveal">
+            <img class="logo" src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
+            <h1>Solarstrom statt Erdgas-Strom</h1>
+            <p class="tagline">
+              Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken &amp; versenden physisch.
+            </p>
+            <div class="cta-row">
+              <a class="cta primary" href="#mitmachen">Jetzt mitmachen</a>
+              <a class="cta secondary" href="#material">Materialien</a>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
 
-  <!-- Zähler: eigene Zeile, optisch „angedockt“ -->
-  <div class="stats-wrap reveal">
-    <div class="stats-banner" role="status" aria-live="polite">
-      <div class="stats-iconbox"><div class="stats-icon" aria-hidden="true">📄</div></div>
-      <div class="stats-text">
-        <div class="stats-label">Erzeugte PDF-Briefe</div>
-        <div class="stats-value"><span id="pdfCount" class="count">–</span></div>
-        <div class="stats-meta" id="statsMeta" hidden>
-          <span class="dot" aria-hidden="true"></span>
-          <span id="statsTime">Stand: –</span>
+      <!-- Zähler: eigene Zeile, “angedockt” -->
+      <div class="stats-wrap reveal">
+        <div class="stats-banner" role="status" aria-live="polite">
+          <div class="stats-iconbox"><div class="stats-icon" aria-hidden="true">📄</div></div>
+          <div class="stats-text">
+            <div class="stats-label">Erzeugte PDF-Briefe</div>
+            <div class="stats-value"><span id="pdfCount" class="count">–</span></div>
+            <div class="stats-meta" id="statsMeta" hidden>
+              <span class="dot" aria-hidden="true"></span>
+              <span id="statsTime">Stand: –</span>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-</header>
+    </header>
 
-
-
-    <!-- CONTENT -->
+    <!-- ===== CONTENT ===== -->
     <main class="middle">
 
       <!-- Einleitung -->
@@ -158,7 +213,7 @@
         <h2 class="section-title">Der Kampagnenstart</h2>
         <div class="video-wrap">
           <iframe
-            src="https://www.youtube-nocookie.com/embed//lzq9l2sW6Lo"
+            src="https://www.youtube-nocookie.com/embed/lzq9l2sW6Lo"
             title="Solarstrom statt Erdgas-Strom – Der Kampagnenstart"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin"
@@ -352,21 +407,22 @@
   </script>
 
   <script>
-  // Reveal on load / scroll
-  (function(){
-    const els = document.querySelectorAll('.reveal');
-    if(!('IntersectionObserver' in window)){ els.forEach(e=>e.classList.add('is-visible')); return; }
-    const io = new IntersectionObserver((entries)=>{
-      entries.forEach(ent=>{
-        if(ent.isIntersecting){ ent.target.classList.add('is-visible'); io.unobserve(ent.target); }
-      });
-    }, {rootMargin: '0px 0px -10% 0px', threshold: .12});
-    els.forEach(e=>io.observe(e));
-  })();
-</script>
-
+    // Reveal on load / scroll
+    (function(){
+      const els = document.querySelectorAll('.reveal');
+      if(!('IntersectionObserver' in window)){ els.forEach(e=>e.classList.add('is-visible')); return; }
+      const io = new IntersectionObserver((entries)=>{
+        entries.forEach(ent=>{
+          if(ent.isIntersecting){ ent.target.classList.add('is-visible'); io.unobserve(ent.target); }
+        });
+      }, {rootMargin: '0px 0px -10% 0px', threshold: .12});
+      els.forEach(e=>io.observe(e));
+    })();
+  </script>
 </body>
 </html>
+
+
 
 
 
