--- a/index.html
+++ b/index.html
@@ -52,27 +52,28 @@
     .hero{
       display:flex; align-items:center; justify-content:center;
       text-align:center; color:#fff;
-      /* unten mehr Platz, damit der Zähler „angedockt“ Platz hat */
-      padding: 90px 16px 120px;
+      /* kompakter: vorher 90px / 120px */
+      padding: clamp(40px, 7vh, 72px) 16px clamp(56px, 9vh, 90px);
     }
     .hero-panel{
-      background: rgba(10,125,50,.82);
-      border-radius:22px; padding:24px 28px;
-      width:min(92vw, 880px); max-width:880px;
+      background: rgba(10,125,50,.78);
+      border-radius:22px; padding:18px 22px;
+      width:min(92vw, 760px); max-width:760px;
       box-shadow:0 18px 48px rgba(0,0,0,.28);
       backdrop-filter: blur(2px);
     }
     .hero .logo{
-      width: clamp(220px, 50vw, 480px);
-      height:auto; display:block; margin:0 auto 12px;
+      /* kompakter: vorher clamp(220px, 50vw, 480px) */
+      width: clamp(170px, 36vw, 380px);
+      height:auto; display:block; margin:0 auto 8px;
       filter: drop-shadow(0 3px 8px rgba(0,0,0,.35));
     }
     .hero h1{
       margin:8px 0 4px;
-      font-size: clamp(1.6rem, 2.2vw + 1rem, 2.4rem);
+      font-size: clamp(1.6rem, 2.2vw + 1rem, 2.2rem);
       font-weight:800; color:#fff;
     }
-    .hero .tagline{ margin:6px 0 0; font-size:1.08rem; opacity:.96; }
+    .hero .tagline{ margin:6px 0 0; font-size:1.04rem; opacity:.96; }
     .cta-row{ margin-top:14px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
     .cta{ display:inline-block; padding:12px 18px; border-radius:12px; font-weight:700; text-decoration:none; transition:transform .15s ease; }
     .cta.primary{ background:linear-gradient(135deg,#0a7d32,#0bbd54); color:#fff; }
@@ -82,8 +83,9 @@
     /* ===== Zähler – kompakt & angedockt ===== */
     .stats-wrap{
       display:flex; justify-content:center;
-      transform: translateY(-56px);
-      margin-bottom: -40px; /* kompensiert das Translate im Flow */
+      /* näher an den Hero gerückt */
+      transform: translateY(-44px);
+      margin-bottom: -28px; /* kompensiert das Translate im Flow */
     }
     .stats-banner{
       display:flex; align-items:center; gap:10px;
@@ -95,17 +97,17 @@
     .stats-icon{ font-size:1.1rem; }
     .stats-text{ line-height:1.1; }
     .stats-label{ font-size:.85rem; opacity:.9; }
-    .stats-value{ font-size:1.7rem; font-weight:800; }
+    .stats-value{ font-size:1.6rem; font-weight:800; }
     .count{ font-variant-numeric: tabular-nums; }
     .stats-meta{ font-size:.75rem; margin-top:2px; opacity:.85; }
     .stats-meta .dot{ display:inline-block; width:6px; height:6px; border-radius:50%; background:#fff; opacity:.7; margin:0 8px 1px; vertical-align:middle; }
 
     @media (max-width: 600px){
-      .hero{ padding: 70px 12px 110px; }
-      .hero-panel{ padding:16px; border-radius:16px; }
-      .hero .logo{ max-width:85%; }
+      .hero{ padding: 48px 12px 72px; }
+      .hero-panel{ padding:14px 16px; border-radius:16px; max-width:94vw; }
+      .hero .logo{ max-width:78%; }
       .hero .tagline{ font-size:.98rem; }
-      .stats-wrap{ transform: translateY(-42px); margin-bottom:-28px; }
+      .stats-wrap{ transform: translateY(-30px); margin-bottom:-20px; }
       .stats-banner{ padding:8px 12px; min-width:200px; }
       .stats-value{ font-size:1.45rem; }
     }
@@ -132,13 +134,8 @@
       background: #000;
       box-shadow: 0 6px 24px rgba(0,0,0,.15);
     }
-    .video-wrap iframe {
-      position: absolute; inset: 0;
-      width: 100%; height: 100%; border: 0;
-    }
-    @media (max-width:600px){
-      .video-wrap{ max-width:95vw; margin-bottom:16px; }
-    }
+    .video-wrap iframe { position: absolute; inset: 0; width: 100%; height: 100%; border: 0; }
+    @media (max-width:600px){ .video-wrap{ max-width:95vw; margin-bottom:16px; } }
 
     /* ===== Partner ===== */
     .partner { border:1px solid rgba(0,0,0,.08); border-radius:12px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04); }
@@ -421,6 +418,7 @@
   </script>
 </body>
 </html>
+
 
 
 
