--- a/index - Test.html
+++ b/index - Test.html
@@ -152,6 +152,54 @@
     /* Reveal Animation */
     .reveal{ opacity:0; transform: translateY(12px); }
     .reveal.is-visible{ opacity:1; transform: translateY(0); transition: opacity .55s ease, transform .55s ease; }
+    /* ==== THEMES ==== */
+/* Default (neutral, was du quasi hast) */
+:root{
+  --bg-2: #ffffff;
+  --surface: var(--card);
+  --border: rgba(0,0,0,.06);
+}
+
+/* Hellgrün – „Solar Mint“ */
+body.theme-mint{
+  --bg: #eef7f1;         /* Seitenhintergrund */
+  --bg-2: #ffffff;       /* helle Flächen */
+  --surface: #ffffff;    /* Karten/Partner */
+  --border: rgba(0,0,0,.06);
+  background: linear-gradient(180deg,#f6fbf7 0%, #ffffff 55%, #eef7f1 100%);
+}
+
+/* Warm/Beige – „Solar Warm“ */
+body.theme-warm{
+  --bg: #f9f7f2;
+  --bg-2: #ffffff;
+  --surface: #ffffff;
+  --border: rgba(120,84,0,.10);
+  background: linear-gradient(180deg,#fbf9f4 0%, #ffffff 60%, #f9f7f2 100%);
+}
+
+/* Hellgrau – „Neutral Light“ */
+body.theme-neutral{
+  --bg: #f5f5f5;
+  --bg-2: #ffffff;
+  --surface: #ffffff;
+  --border: rgba(0,0,0,.08);
+  background: linear-gradient(180deg,#f7f7f7 0%, #ffffff 60%, #f3f3f3 100%);
+}
+
+/* Bläulich – „Tech Mist“ */
+body.theme-mist{
+  --bg: #edf3f7;
+  --bg-2: #ffffff;
+  --surface: #ffffff;
+  --border: rgba(0,40,80,.08);
+  background: linear-gradient(180deg,#f2f6f9 0%, #ffffff 60%, #edf3f7 100%);
+}
+
+/* Komponenten binden die Variablen automatisch */
+.card, .partner { background: var(--surface); border-color: var(--border); }
+.org .logoBox{ background:#f9fafb; border:1px solid var(--border); }
+
   </style>
 </head>
 <body>
@@ -418,6 +466,7 @@
   </script>
 </body>
 </html>
+
 
 
 
