--- a/indexTest.html
+++ b/indexTest.html
@@ -203,6 +203,10 @@ body.theme-mist{
   </style>
 </head>
 <body>
+  <body class="theme-mint">        <!-- hellgrün -->
+<!-- <body class="theme-warm">  --> <!-- beige/warm -->
+<!-- <body class="theme-neutral">--> <!-- hellgrau -->
+<!-- <body class="theme-mist">   --> <!-- tech-bläulich -->
   <div class="page">
     <!-- ===== HERO ===== -->
     <header class="site-header middle">
@@ -466,6 +470,7 @@ body.theme-mist{
   </script>
 </body>
 </html>
+
 
 
 
