--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     html, body { height: 100%; }
     body {
       margin: 0;
-      font: 16px/1.6 "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font: 16px/1.7 "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       background: var(--bg);
       color: var(--text);
     }
@@ -49,11 +49,28 @@
         linear-gradient(rgba(0,0,0,.32), rgba(0,0,0,.55)),
         url('assets/Bundestag.jpg') center 45%/cover no-repeat;
     }
+    /* Warme, sehr subtile Tönung über dem Foto */
+    .hero-wrap::before{
+      content:"";
+      position:absolute; inset:0;
+      background: linear-gradient(0deg, rgba(246,177,10,.08), rgba(246,177,10,.02));
+      mix-blend-mode: soft-light;
+      pointer-events:none;
+    }
+    /* Solar Glow hinter dem Hero */
+    .hero-wrap::after{
+      content:"";
+      position:absolute; inset:0;
+      background: radial-gradient(ellipse at 50% 120%, rgba(246,177,10,.28) 0%, rgba(246,177,10,0) 70%);
+      pointer-events:none;
+    }
+
     .hero{
       display:flex; align-items:center; justify-content:center;
       text-align:center; color:#fff;
       /* kompakter: vorher 90px / 120px */
       padding: clamp(40px, 7vh, 72px) 16px clamp(56px, 9vh, 90px);
+      position:relative;
     }
     .hero-panel{
       background: rgba(10,125,50,.78);
@@ -61,7 +78,14 @@
       width:min(92vw, 760px); max-width:760px;
       box-shadow:0 18px 48px rgba(0,0,0,.28);
       backdrop-filter: blur(2px);
+      position:relative; overflow:hidden;
     }
+    /* Solar Highlight unter dem Panel */
+    .hero-panel::after{
+      content:""; position:absolute; left:0; right:0; bottom:0; height:6px;
+      background: linear-gradient(90deg, #f6b10a, #ffd84a);
+    }
+
     .hero .logo{
       /* kompakter: vorher clamp(220px, 50vw, 480px) */
       width: clamp(170px, 36vw, 380px);
@@ -79,6 +103,15 @@
     .cta.primary{ background:linear-gradient(135deg,#0a7d32,#0bbd54); color:#fff; }
     .cta.secondary{ background:#fff; color:#0a7d32; border:1px solid #cfe7d8; }
     .cta:hover{ transform:translateY(-1px); }
+    /* CTA Finishing (Primärbutton) */
+    .cta.primary{
+      box-shadow:0 4px 15px rgba(10,125,50,.25);
+      transition: transform .25s ease, box-shadow .25s ease;
+    }
+    .cta.primary:hover{
+      transform: translateY(-2px);
+      box-shadow:0 6px 22px rgba(10,125,50,.35);
+    }
 
     /* ===== Zähler – kompakt & angedockt ===== */
     .stats-wrap{
@@ -115,11 +148,23 @@
     /* ===== Sektionen / Karten ===== */
     main.middle > section { margin: 32px 0; }
     .lead { font-size:1.05rem; }
-    .section-title{ font-size:1.5rem; margin:0 0 14px; }
+    .section-title{ font-size:1.5rem; margin:0 0 14px; font-weight:700; }
     .grid2 { display:grid; gap:18px; grid-template-columns:1fr; }
     @media (min-width:780px){ .grid2{ grid-template-columns:1fr 1fr } }
-    .card { border:1px solid rgba(0,0,0,.06); border-radius: var(--radius); padding:18px; background:var(--card); box-shadow: var(--shadow); }
-    .card h3 { margin-top:0 }
+    .card {
+      border:1px solid rgba(0,0,0,.06);
+      border-radius: var(--radius);
+      padding:18px;
+      background:#fffdf8; /* Solar Contrast */
+      box-shadow: var(--shadow);
+      transition: transform .2s ease, box-shadow .2s ease;
+    }
+    .card h3 { margin-top:0; font-weight:700; }
+    /* Floating Cards */
+    .card:hover{
+      transform: translateY(-3px);
+      box-shadow: 0 6px 24px rgba(0,0,0,.12);
+    }
     .callout { border-left: 4px solid var(--accent); background:#fff8e1; padding:14px 16px; border-radius: 8px; }
 
     /* ===== YouTube: groß & responsiv ===== */
@@ -152,9 +197,44 @@
     /* Reveal Animation */
     .reveal{ opacity:0; transform: translateY(12px); }
     .reveal.is-visible{ opacity:1; transform: translateY(0); transition: opacity .55s ease, transform .55s ease; }
+
+    /* ==== THEMES ==== */
+    body.theme-warm {
+      --bg: #f6f1e8;
+      background: linear-gradient(180deg,#f9f6ef 0%, #ffffff 50%, #f4ebdc 100%) !important;
+    }
+
+    /* ==== ECO TEXTURE (CSS-only) ==== */
+    body::before{
+      content:"";
+      position:fixed; inset:0;
+      pointer-events:none; z-index:-1;
+      /* Sehr subtile Körnung via mehrere Radialverläufe */
+      background:
+        radial-gradient(1px 1px at 25% 15%, rgba(0,0,0,.04) 0, rgba(0,0,0,0) 60%),
+        radial-gradient(1px 1px at 60% 40%, rgba(0,0,0,.03) 0, rgba(0,0,0,0) 60%),
+        radial-gradient(1px 1px at 80% 70%, rgba(0,0,0,.03) 0, rgba(0,0,0,0) 60%),
+        radial-gradient(1px 1px at 40% 85%, rgba(0,0,0,.02) 0, rgba(0,0,0,0) 60%);
+      opacity:.28;
+      mix-blend-mode:multiply;
+    }
+
+    /* ==== Sticky CTA (mobil) ==== */
+    @media (max-width:700px){
+      .sticky-cta{
+        position:fixed; left:0; right:0; bottom:12px; z-index:1000;
+        display:flex; justify-content:center; pointer-events:none;
+      }
+      .sticky-cta a{
+        pointer-events:auto;
+        background:linear-gradient(135deg,#0a7d32,#0bbd54);
+        color:#fff; padding:10px 18px; border-radius:10px;
+        font-weight:700; text-decoration:none; box-shadow:0 8px 20px rgba(10,125,50,.25);
+      }
+    }
   </style>
 </head>
-<body>
+<body class="theme-warm">
   <div class="page">
     <!-- ===== HERO ===== -->
     <header class="site-header middle">
@@ -331,6 +411,11 @@
     </footer>
   </div>
 
+  <!-- Sticky CTA (mobil) -->
+  <div class="sticky-cta">
+    <a href="#mitmachen" aria-label="Jetzt mitmachen">Jetzt mitmachen</a>
+  </div>
+
   <script>
     // Smooth Scrolling für In-Page-Links
     document.addEventListener('click', (e) => {
@@ -418,6 +503,7 @@
   </script>
 </body>
 </html>
+
 
 
 
